src/test/deca/context/valid/created/objet/def_meth.deca
// Description :
// test de verification methode avec deux arguments
//
// Resultats :
// ok
class A {
    int x ;
    void init(int x, float y) {
        float z = x+y;
    }

    void m() {
        x = 0 ;
    }
}